--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
-  "name": "svelte-app",
+  "name": "devjobs",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.svelte$": ["svelte-jester", { "preprocess": true }],
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "svelte"
+    ]
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "rollup": "^2.66.1",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "sirv-cli": "^2.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "typescript": "^4.0.0",
-    "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^2.0.0"
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.46.3",
+    "sirv-cli": "^2.0.2",
+    "svelte-check": "^2.3.0",
+    "svelte-preprocess": "^4.10.2",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "typescript": "^4.5.5",
+    "tslib": "^2.3.1",
+    "@tsconfig/svelte": "*",
+    "jest": "*",
+    "ts-jest": "*",
+    "@testing-library/svelte": "*",
+    "@testing-library/jest-dom": "*",
+    "svelte-jester": "*",
+    "@types/jest": "*",
+    "babel-jest": "*",
+    "@babel/preset-env": "*"
+
   },
   "dependencies": {}
 }
