--- a/package.json
+++ b/package.json
@@ -28,30 +28,32 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "*",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@testing-library/jest-dom": "*",
+    "@testing-library/svelte": "*",
+    "@tsconfig/svelte": "*",
+    "@types/jest": "*",
+    "babel-jest": "*",
+    "jest": "*",
     "rollup": "^2.66.1",
     "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-dev": "*",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.46.3",
     "sirv-cli": "^2.0.2",
+    "svelte": "^3.46.3",
     "svelte-check": "^2.3.0",
-    "svelte-preprocess": "^4.10.2",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "typescript": "^4.5.5",
-    "tslib": "^2.3.1",
-    "@tsconfig/svelte": "*",
-    "jest": "*",
-    "ts-jest": "*",
-    "@testing-library/svelte": "*",
-    "@testing-library/jest-dom": "*",
     "svelte-jester": "*",
-    "@types/jest": "*",
-    "babel-jest": "*",
-    "@babel/preset-env": "*",
-    "rollup-plugin-dev": "*"
+    "svelte-preprocess": "^4.10.2",
+    "ts-jest": "*",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "svelte-navigator": "^3.1.5"
+  }
 }
