Add tailwind, postcss, autoprefixer dev dependency.

--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@tailwindcss/typography": "^0.5.1",
     "@testing-library/jest-dom": "*",
     "@testing-library/svelte": "*",
     "@tsconfig/svelte": "*",
     "@types/jest": "*",
+    "autoprefixer": "^10.4.2",
     "babel-jest": "*",
     "jest": "*",
+    "postcss": "^8.4.6",
     "rollup": "^2.66.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-dev": "*",
@@ -50,6 +53,7 @@
     "svelte-check": "^2.3.0",
     "svelte-jester": "*",
     "svelte-preprocess": "^4.10.2",
+    "tailwindcss": "^3.0.18",
     "ts-jest": "*",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
